fix api document
